--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Capatel - Solar Energy HTML Template</title>
+        <title>Capatel - Solar Energy HTML Template 2</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -236,7 +236,7 @@
                             <div class="about-content s-about-content pl-30">
                                 <div class="about-title second-title pb-25">  
                                     <h5>ABOUT US</h5>
-                                    <h2>What’s Our Resources Story</h2>
+                                    <h2>What's Our Resources Story</h2>
                                 </div>
                                 
                                 <p>Praesent fringilla lorem tincidunt, commodo erat sit amet, eleifend neque. Etiam nec vestibulum turpis, quis tempus elit. Sed tempus elit porttitor odio gravida, sed maximus turpis mattis. Vivamus at urna ut libero ornare congue.</p>
