--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                                     <li>
                                         <i class="fas fa-envelope"></i>
                                       
-                                        <span>info@example.com</span>
+                                        <span>info@webdaas.dev</span>
                                     </li>
                                      <li>
                                       <i class="far fa-map-marker-alt"></i>
-                                        <span>12/7 Aabot, Poor Street, Mumbai</span>
+                                        <span>Raleigh, NC</span>
                                     </li>
                                 </ul>
                             </div>
