--- a/index.html
+++ b/index.html
@@ -36,19 +36,15 @@
                                       
                                         <span>info@webdaas.dev</span>
                                     </li>
-                                     <li>
-                                      <i class="far fa-map-marker-alt"></i>
-                                        <span>Raleigh, NC</span>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
                          <div class="col-lg-6 col-md-6 d-none d-lg-block">
                              <div class="header-social text-right">
                             <span>
-                                <a href="#" title="Facebook"><i class="fab fa-facebook"></i></a>
-                                <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-                                <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>                               
+                                <a href="https://www.facebook.com/sporman" target="_blank" rel="noreferer noopener" title="Facebook"><i class="fab fa-facebook"></i></a>
+                                <a href="https://twitter.com/sporman_" rel="noreferer noopener" title="Twitter"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com/in/sporman/" rel="noreferer noopener" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>                               
                                </span>                    
                                <!--  /social media icon redux -->                               
                         </div>
