--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     <li>
                                         <i class="fas fa-envelope"></i>
                                       
-                                        <span>info@webdaas.dev</span>
+                                        <span><a href="info@webdaas.dev">info@webdaas.dev</a></span>
                                     </li>
                                 </ul>
                             </div>
