--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     <li>
                                         <i class="fas fa-envelope"></i>
                                       
-                                        <span><a href="info@webdaas.dev">info@webdaas.dev</a></span>
+                                        <span><a href="mailto:info@webdaas.dev">info@webdaas.dev</a></span>
                                     </li>
                                 </ul>
                             </div>
@@ -131,7 +131,7 @@
         <!-- offcanvas-area -->
                 <div class="offcanvas-menu">
                 <span class="menu-close"><i class="fas fa-times"></i></span>
-              <form role="search" method="get" id="searchform"   class="searchform" action="http://wordpress.zcube.in/xconsulta/">
+              <form role="search" method="get" id="searchform" data-netlify="true"  class="searchform" action="http://wordpress.zcube.in/xconsulta/">
                                 <input type="text" name="s" id="search" value="" placeholder="Search"  />
                                 <button><i class="fa fa-search"></i></button>
                             </form>
