--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     <li>
                                         <i class="fas fa-envelope"></i>
                                       
-                                        <span><a href="mailto:info@webdaas.dev">info@webdaas.dev</a></span>
+                                        <span><a href="mailto:info@webdaas.dev" </span>
                                     </li>
                                 </ul>
                             </div>
@@ -131,7 +131,7 @@
         <!-- offcanvas-area -->
                 <div class="offcanvas-menu">
                 <span class="menu-close"><i class="fas fa-times"></i></span>
-              <form role="search" method="get" id="searchform" data-netlify="true"  class="searchform" action="http://wordpress.zcube.in/xconsulta/">
+              <form role="search" method="get" id="searchform"   class="searchform" action="http://wordpress.zcube.in/xconsulta/">
                                 <input type="text" name="s" id="search" value="" placeholder="Search"  />
                                 <button><i class="fa fa-search"></i></button>
                             </form>
@@ -1184,7 +1184,7 @@
                         </div>
                          <div class="col-xl-6 col-lg-6">
                              <div class="newslater-area">
-                                <form name="ajax-form" id="contact-form4" action="#" method="post" class="contact-form newslater">
+                                <form name="ajax-form" data-netlify="true" id="contact-form4" action="#" method="post" class="contact-form newslater">
                                <div class="form-group">
                                   <input class="form-control" id="email2" name="email" type="email" placeholder="Email Address..." value="" required=""> 
                                   <button type="submit" class="btn btn-custom" id="send2">Subscribe Now</button>
