--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
                              <div class="newslater-area">
                                 <form name="ajax-form" data-netlify="true" id="contact-form4" action="#" method="post" class="contact-form newslater">
                                <div class="form-group">
-                                  <input class="form-control" id="email2" name="email" type="email" placeholder="Email Address..." value="" required=""> 
+                                  <input class="form-control" id="email2" name="email" type="email" placeholder="Email Address...." value="" required=""> 
                                   <button type="submit" class="btn btn-custom" id="send2">Subscribe Now</button>
                                </div>
                                <!-- /Form-email -->	
